--- a/projects/demo/src/app/labels/labels-with-badges.demo.html
+++ b/projects/demo/src/app/labels/labels-with-badges.demo.html
@@ -5,7 +5,80 @@
   ~ The full license information can be found in LICENSE in the root directory of this project.
   -->
 
-<h2>Angular Label</h2>
+<h2>Angular Outlined Label and badges</h2>
+<div class="clr-example">
+  <div>
+    <clr-label [clrColor]="ClrLabelColors.Purple" [clrText]="'Austin'" [clrBadgeText]="'1'" [clrClickable]="true">
+      <cds-icon shape="close"></cds-icon>
+    </clr-label>
+    <clr-label
+      [clrColor]="ClrLabelColors.Blue"
+      [clrText]="'New York'"
+      [clrBadgeText]="'2'"
+      [clrClickable]="true"
+    ></clr-label>
+    <clr-label
+      [clrColor]="ClrLabelColors.Orange"
+      [clrText]="'Palo Alto'"
+      [clrBadgeText]="'3'"
+      [clrClickable]="true"
+    ></clr-label>
+    <clr-label
+      [clrColor]="ClrLabelColors.LightBlue"
+      [clrText]="'San Francisco'"
+      [clrBadgeText]="'12'"
+      [clrClickable]="true"
+    ></clr-label>
+    <clr-label [clrText]="'Seattle'" [clrBadgeText]="'15+'" [clrClickable]="true"></clr-label>
+    <clr-label [clrText]="'Philadelphia'" [clrBadgeText]="'0'" [clrClickable]="true" [clrDisabled]="true"></clr-label>
+  </div>
+</div>
+
+<h2>Angular Solid Label and badges</h2>
+<div class="clr-example">
+  <div>
+    <clr-label
+      [clrColor]="ClrLabelColors.Purple"
+      [clrText]="'Austin'"
+      [clrBadgeText]="'1'"
+      [clrSolid]="true"
+      [clrClickable]="true"
+    >
+      <cds-icon shape="close"></cds-icon>
+    </clr-label>
+    <clr-label
+      [clrColor]="ClrLabelColors.Blue"
+      [clrText]="'New York'"
+      [clrBadgeText]="'2'"
+      [clrSolid]="true"
+      [clrClickable]="true"
+    ></clr-label>
+    <clr-label
+      [clrColor]="ClrLabelColors.Orange"
+      [clrText]="'Palo Alto'"
+      [clrBadgeText]="'3'"
+      [clrSolid]="true"
+      [clrClickable]="true"
+    ></clr-label>
+    <clr-label
+      [clrColor]="ClrLabelColors.LightBlue"
+      [clrText]="'San Francisco'"
+      [clrBadgeText]="'12'"
+      [clrSolid]="true"
+      [clrClickable]="true"
+    ></clr-label>
+    <clr-label [clrText]="'Seattle'" [clrBadgeText]="'15+'" [clrSolid]="true" [clrClickable]="true"></clr-label>
+    <clr-label
+      [clrText]="'Philadelphia'"
+      [clrBadgeText]="'0'"
+      [clrSolid]="true"
+      [clrClickable]="true"
+      [clrDisabled]="true"
+    ></clr-label>
+  </div>
+</div>
+
+<h2>Angular Labels with content projection</h2>
 <div class="clr-example">
   <div>
     <clr-label [clrColor]="ClrLabelColors.Purple" [clrBadgeText]="'1'" [clrClickable]="true">
@@ -19,27 +92,6 @@
     >
     <clr-label [clrBadgeText]="'15+'" [clrClickable]="true">Seattle</clr-label>
     <clr-label [clrBadgeText]="'0'" [clrClickable]="true" [clrDisabled]="true">Philadephia</clr-label>
-  </div>
-</div>
-
-<h2>Angular Solid Label and badges</h2>
-<div class="clr-example">
-  <div>
-    <clr-label [clrColor]="ClrLabelColors.Purple" [clrBadgeText]="'1'" [clrClickable]="true">
-      Austin
-      <cds-icon shape="close"></cds-icon>
-    </clr-label>
-    <clr-label [clrColor]="ClrLabelColors.Blue" [clrBadgeText]="'2'" [clrSolid]="true" [clrClickable]="true"
-      >New York</clr-label
-    >
-    <clr-label [clrColor]="ClrLabelColors.Orange" [clrBadgeText]="'3'" [clrSolid]="true" [clrClickable]="true"
-      >Palo Alto</clr-label
-    >
-    <clr-label [clrColor]="ClrLabelColors.LightBlue" [clrBadgeText]="'12'" [clrSolid]="true" [clrClickable]="true">
-      San Francisco
-    </clr-label>
-    <clr-label [clrBadgeText]="'15+'" [clrSolid]="true" [clrClickable]="true">Seattle</clr-label>
-    <clr-label [clrBadgeText]="'0'" [clrSolid]="true" [clrClickable]="true" [clrDisabled]="true">Philadephia</clr-label>
   </div>
 </div>
 
