--- a/projects/demo/src/app/combobox/combobox.demo.html
+++ b/projects/demo/src/app/combobox/combobox.demo.html
@@ -5,7 +5,12 @@
   ~ The full license information can be found in LICENSE in the root directory of this project.
   -->
 
-<h2>Combobox <button class="btn btn-sm btn-primary" (click)="disabled = !disabled">Toggle Disabled</button></h2>
+<h2>
+  Combobox
+  <button class="btn btn-sm btn-primary" (click)="disabled = !disabled">Toggle Disabled</button>
+  <button class="btn btn-sm btn-primary" (click)="refreshStates()">Replace data</button>
+  <button class="btn btn-sm btn-primary" (click)="updateStates()">Update data</button>
+</h2>
 
 <h4>Vertical</h4>
 <form clrForm clrLayout="vertical">
@@ -30,7 +35,13 @@
 
   <clr-combobox-container>
     <label>My State</label>
-    <clr-combobox [(ngModel)]="vertical.three" name="three" required [disabled]="disabled">
+    <clr-combobox
+      [(ngModel)]="vertical.three"
+      [clrItemCompare]="compareFunc"
+      name="three"
+      required
+      [disabled]="disabled"
+    >
       <clr-options>
         <clr-option *clrOptionItems="let state of states; field:'name'" [clrValue]="state">
           <cds-icon shape="world" role="img" aria-label="World is turning"></cds-icon> {{state.name}}
@@ -71,7 +82,14 @@
 
   <clr-combobox-container>
     <label>Favorite States</label>
-    <clr-combobox [(ngModel)]="vertical.five" name="five" clrMulti="true" required [disabled]="disabled">
+    <clr-combobox
+      [(ngModel)]="vertical.five"
+      [clrItemCompare]="compareFunc"
+      name="five"
+      clrMulti="true"
+      required
+      [disabled]="disabled"
+    >
       <ng-container *clrOptionSelected="let selected">
         <cds-icon shape="sun" size="12" role="img" aria-label="welcome home"></cds-icon> {{selected?.name}}
       </ng-container>
