fix(label, badge): pr feedback

--- a/projects/angular/src/emphasis/badge/_badges.clarity.scss
+++ b/projects/angular/src/emphasis/badge/_badges.clarity.scss
@@ -28,7 +28,7 @@
 @mixin generateBadgeStyles($color: gray, $alias: null) {
   $colors: map.get(badges-variables.$badge-colors, $color);
 
-  &.badge-#{$color} {
+  &.badge-#{'' + $color} {
     @include buildBadgeStyles($colors);
   }
 
