--- a/projects/angular/src/emphasis/label/_labels.clarity.scss
+++ b/projects/angular/src/emphasis/label/_labels.clarity.scss
@@ -57,7 +57,7 @@
   $colors: map.get(label-variables.$label-colors, $color);
   $badge-colors: map.get(badges-variables.$badge-colors, $color);
 
-  &.label-#{$color} {
+  &.label-#{'' + $color} {
     @include buildLabelStyles($colors, $badge-colors);
   }
 
