--- a/projects/demo/src/app/badges/badge-colors.demo.html
+++ b/projects/demo/src/app/badges/badge-colors.demo.html
@@ -24,11 +24,11 @@
 <h2>Angular Outlined Badges</h2>
 <div class="clr-example">
   <div>
-    <clr-badge [clrSolid]="false" [clrColor]="'gray'">11</clr-badge>
-    <clr-badge [clrSolid]="false" [clrColor]="ClrBadgeColors.Purple">15</clr-badge>
-    <clr-badge [clrSolid]="false" [clrColor]="ClrBadgeColors.Blue">2</clr-badge>
-    <clr-badge [clrSolid]="false" [clrColor]="ClrBadgeColors.Orange">3</clr-badge>
-    <clr-badge [clrSolid]="false" [clrColor]="ClrBadgeColors.LightBlue">12</clr-badge>
+    <clr-badge [clrType]="'outlined'" [clrColor]="'gray'">11</clr-badge>
+    <clr-badge [clrType]="'outlined'" [clrColor]="ClrBadgeColors.Purple">15</clr-badge>
+    <clr-badge [clrType]="'outlined'" [clrColor]="ClrBadgeColors.Blue">2</clr-badge>
+    <clr-badge [clrType]="'outlined'" [clrColor]="ClrBadgeColors.Orange">3</clr-badge>
+    <clr-badge [clrType]="'outlined'" [clrColor]="ClrBadgeColors.LightBlue">12</clr-badge>
   </div>
 </div>
 
