--- a/projects/demo/src/app/badges/badge-statuses.demo.html
+++ b/projects/demo/src/app/badges/badge-statuses.demo.html
@@ -15,10 +15,10 @@
 
 <h2>Angular Outlined Badges</h2>
 <div class="clr-example">
-  <clr-badge [clrColor]="ClrBadgeColors.Info" [clrSolid]="false">2</clr-badge>
-  <clr-badge [clrColor]="ClrBadgeColors.Success" [clrSolid]="false">3</clr-badge>
-  <clr-badge [clrColor]="ClrBadgeColors.Warning" [clrSolid]="false">12</clr-badge>
-  <clr-badge [clrColor]="ClrBadgeColors.Danger" [clrSolid]="false">15</clr-badge>
+  <clr-badge [clrColor]="ClrBadgeColors.Info" [clrType]="'outlined'">2</clr-badge>
+  <clr-badge [clrColor]="ClrBadgeColors.Success" [clrType]="'outlined'">3</clr-badge>
+  <clr-badge [clrColor]="ClrBadgeColors.Warning" [clrType]="'outlined'">12</clr-badge>
+  <clr-badge [clrColor]="ClrBadgeColors.Danger" [clrType]="'outlined'">15</clr-badge>
 </div>
 
 <h2>CSS Badges</h2>
