--- a/projects/demo/src/app/labels/labels-status.demo.html
+++ b/projects/demo/src/app/labels/labels-status.demo.html
@@ -39,7 +39,7 @@
       [clrColor]="ClrLabelColors.Danger"
       [clrText]="'Danger'"
       [clrBadgeText]="'1'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
     >
       <cds-icon shape="close"></cds-icon>
@@ -48,21 +48,21 @@
       [clrColor]="ClrLabelColors.Info"
       [clrText]="'Info'"
       [clrBadgeText]="'2'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
     ></clr-label>
     <clr-label
       [clrColor]="ClrLabelColors.Success"
       [clrText]="'Success '"
       [clrBadgeText]="'3'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
     ></clr-label>
     <clr-label
       [clrColor]="ClrLabelColors.Warning"
       [clrText]="'Warning'"
       [clrBadgeText]="'12'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
     ></clr-label>
   </div>
