--- a/projects/demo/src/app/labels/labels-with-badges.demo.html
+++ b/projects/demo/src/app/labels/labels-with-badges.demo.html
@@ -41,7 +41,7 @@
       [clrColor]="ClrLabelColors.Purple"
       [clrText]="'Austin'"
       [clrBadgeText]="'1'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
     >
       <cds-icon shape="close"></cds-icon>
@@ -50,28 +50,28 @@
       [clrColor]="ClrLabelColors.Blue"
       [clrText]="'New York'"
       [clrBadgeText]="'2'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
     ></clr-label>
     <clr-label
       [clrColor]="ClrLabelColors.Orange"
       [clrText]="'Palo Alto'"
       [clrBadgeText]="'3'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
     ></clr-label>
     <clr-label
       [clrColor]="ClrLabelColors.LightBlue"
       [clrText]="'San Francisco'"
       [clrBadgeText]="'12'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
     ></clr-label>
-    <clr-label [clrText]="'Seattle'" [clrBadgeText]="'15+'" [clrSolid]="true" [clrClickable]="true"></clr-label>
+    <clr-label [clrText]="'Seattle'" [clrBadgeText]="'15+'" [clrType]="'solid'" [clrClickable]="true"></clr-label>
     <clr-label
       [clrText]="'Philadelphia'"
       [clrBadgeText]="'0'"
-      [clrSolid]="true"
+      [clrType]="'solid'"
       [clrClickable]="true"
       [clrDisabled]="true"
     ></clr-label>
