fix(forms): pr feedback

--- a/projects/demo/src/app/forms/dynamic-controls/dynamic-controls.demo.html
+++ b/projects/demo/src/app/forms/dynamic-controls/dynamic-controls.demo.html
@@ -76,6 +76,7 @@
     <clr-control-helper>Helper Message</clr-control-helper>
     <clr-control-success *clrIfSuccess>Successful</clr-control-success>
     <clr-control-error *clrIfError="'required'">Required error</clr-control-error>
+    <clr-control-error *clrIfError="'pattern'">Must be Two</clr-control-error>
   </clr-radio-container>
   }
 </form>
